# react-native-executorch

./: .gitignore  package.json  react-native-executorch.podspec  tsconfig.doc.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  ETInstallerModule.cpp  ETInstallerModule.h
android/src/main/java/com/swmansion/rnexecutorch/: ETInstaller.kt  RnExecutorchPackage.kt
common/ada/: ada.cpp  ada.h
common/pfft/: pfft.c  pfft.h
common/rnexecutorch/: Error.h  ErrorCodes.h  Log.h  RnExecutorchInstaller.cpp  RnExecutorchInstaller.h  TokenizerModule.cpp  TokenizerModule.h
common/rnexecutorch/data_processing/: FFT.cpp  FFT.h  FileUtils.h  ImageProcessing.cpp  ImageProcessing.h  Numerical.cpp  Numerical.h  Sequential.h  base64.cpp  base64.h  dsp.cpp  dsp.h  gzip.cpp  gzip.h
common/rnexecutorch/host_objects/: JSTensorViewIn.h  JSTensorViewOut.h  JsiConversions.h  ModelHostObject.h
common/rnexecutorch/jsi/: JsiHostObject.cpp  JsiHostObject.h  OwningArrayBuffer.h  Promise.cpp  Promise.h  RuntimeAwareCache.h  RuntimeLifecycleMonitor.cpp  RuntimeLifecycleMonitor.h
common/rnexecutorch/metaprogramming/: ConstructorHelpers.h  ContainerHelpers.h  FunctionHelpers.h  TypeConcepts.h
common/rnexecutorch/models/: BaseModel.cpp  BaseModel.h  VisionModel.cpp  VisionModel.h
common/rnexecutorch/tests/: CMakeLists.txt  README.md  run_tests.sh
common/rnexecutorch/tests/integration/: BaseModelTest.cpp  BaseModelTests.h  ClassificationTest.cpp  ImageEmbeddingsTest.cpp  LLMTest.cpp  OCRTest.cpp  ObjectDetectionTest.cpp  SemanticSegmentationTest.cpp  SpeechToTextTest.cpp  StyleTransferTest.cpp  TextEmbeddingsTest.cpp  TextToImageTest.cpp  TokenizerModuleTest.cpp  VerticalOCRTest.cpp  VoiceActivityDetectionTest.cpp
common/rnexecutorch/tests/integration/assets/: test_audio_float.raw
common/rnexecutorch/tests/integration/stubs/: jsi_stubs.cpp
common/rnexecutorch/tests/integration/utils/: TestUtils.h
common/rnexecutorch/tests/unit/: FileUtilsTest.cpp  ImageProcessingTest.cpp  LogTest.cpp  NumericalTest.cpp
common/rnexecutorch/threads/: GlobalThreadPool.h  HighPerformanceThreadPool.h
common/rnexecutorch/utils/: FrameExtractor.cpp  FrameExtractor.h  FrameProcessor.cpp  FrameProcessor.h
common/runner/: arange_util.cpp  arange_util.h  constants.h  io_manager.h  irunner.h  kernel_includes.h  runner.cpp  runner.h  sampler.cpp  sampler.h  stats.h  text_decoder_runner.cpp  text_decoder_runner.h  text_prefiller.cpp  text_prefiller.h  text_token_generator.h  util.h
ios/RnExecutorch/: ETInstaller.h  ETInstaller.mm
ios/RnExecutorch.xcodeproj/: project.pbxproj
lib/module/: index.js  index.js.map
lib/module/common/: Logger.js  Logger.js.map
lib/module/constants/: commonVision.js  commonVision.js.map  llmDefaults.js  llmDefaults.js.map  modelUrls.js  modelUrls.js.map  versions.js  versions.js.map
lib/module/controllers/: BaseOCRController.js  BaseOCRController.js.map  LLMController.js  LLMController.js.map  OCRController.js  OCRController.js.map  VerticalOCRController.js  VerticalOCRController.js.map
lib/module/errors/: ErrorCodes.js  ErrorCodes.js.map  errorUtils.js  errorUtils.js.map
lib/module/hooks/: useModule.js  useModule.js.map  useModuleFactory.js  useModuleFactory.js.map
lib/module/modules/: BaseLabeledModule.js  BaseLabeledModule.js.map  BaseModule.js  BaseModule.js.map
lib/module/native/: NativeETInstaller.js  NativeETInstaller.js.map  RnExecutorchModules.js  RnExecutorchModules.js.map
lib/module/types/: classification.js  classification.js.map  common.js  common.js.map  computerVision.js  computerVision.js.map  executorchModule.js  executorchModule.js.map  genericImageSegmentation.js  genericImageSegmentation.js.map  imageEmbeddings.js  imageEmbeddings.js.map  llm.js  llm.js.map  objectDetection.js  objectDetection.js.map  ocr.js  ocr.js.map  semanticSegmentation.js  semanticSegmentation.js.map  stt.js  stt.js.map  styleTransfer.js  styleTransfer.js.map  textEmbeddings.js  textEmbeddings.js.map  tokenizer.js  tokenizer.js.map  tti.js  tti.js.map  tts.js  tts.js.map  vad.js  vad.js.map
lib/module/utils/: ResourceFetcher.js  ResourceFetcher.js.map  ResourceFetcherUtils.js  ResourceFetcherUtils.js.map  llm.js  llm.js.map
lib/typescript/: index.d.ts
lib/typescript/common/: Logger.d.ts
lib/typescript/constants/: commonVision.d.ts  llmDefaults.d.ts  modelUrls.d.ts  versions.d.ts
lib/typescript/controllers/: BaseOCRController.d.ts  LLMController.d.ts  OCRController.d.ts  VerticalOCRController.d.ts
lib/typescript/errors/: ErrorCodes.d.ts  errorUtils.d.ts
lib/typescript/hooks/: useModule.d.ts  useModuleFactory.d.ts
lib/typescript/modules/: BaseLabeledModule.d.ts  BaseModule.d.ts
lib/typescript/native/: NativeETInstaller.d.ts  RnExecutorchModules.d.ts
lib/typescript/types/: classification.d.ts  common.d.ts  executorchModule.d.ts  imageEmbeddings.d.ts  llm.d.ts  objectDetection.d.ts  ocr.d.ts  semanticSegmentation.d.ts  stt.d.ts  styleTransfer.d.ts  textEmbeddings.d.ts  tokenizer.d.ts  tti.d.ts  tts.d.ts  vad.d.ts
lib/typescript/utils/: ResourceFetcher.d.ts  ResourceFetcherUtils.d.ts  llm.d.ts
scripts/: create-package.sh
src/common/: Logger.ts
src/constants/: commonVision.ts  llmDefaults.ts  modelUrls.ts  versions.ts
src/constants/ocr/: models.ts  symbols.ts
src/constants/tts/: models.ts  voices.ts
src/controllers/: BaseOCRController.ts  VerticalOCRController.ts
src/errors/: ErrorCodes.ts  errorUtils.ts
src/hooks/: useModule.ts  useModuleFactory.ts
src/hooks/computer_vision/: useOCR.ts  (+7 more)
src/modules/: BaseLabeledModule.ts  BaseModule.ts
src/native/: NativeETInstaller.ts  RnExecutorchModules.ts
src/types/: classification.ts  common.ts  executorchModule.ts  imageEmbeddings.ts  llm.ts  objectDetection.ts  ocr.ts  semanticSegmentation.ts  stt.ts  styleTransfer.ts  textEmbeddings.ts  tokenizer.ts  tti.ts  tts.ts  vad.ts
src/utils/: ResourceFetcher.ts  ResourceFetcherUtils.ts  llm.ts
(+229 files in other folders)
